syntax = "proto3";
package hupayxcom.taycanswap.taycanswap;

// this line is used by starport scaffolding # proto/tx/import
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/hupayx-com/taycanSwap/x/taycanswap/types";

// Msg defines the Msg service.
service Msg {
      rpc TaycanSwap(MsgTaycanSwap) returns (MsgTaycanSwapResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgTaycanSwap {
  string creator = 1;
  cosmos.base.v1beta1.Coin coin = 2 [(gogoproto.nullable) = false];
}

message MsgTaycanSwapResponse {
}

// this line is used by starport scaffolding # proto/tx/message